1. Fixed color and alignment of blockquotes in the Last Redoubt CSS scheme. 2. Fixed links in "A Sequel to THE TIME MACHINE?" and the essay template. 3. Fixed the work table of contents in "Eater."

--- a/css/darkening.css
+++ b/css/darkening.css
@@ -189,7 +189,8 @@ main {
   line-height: 1.5;
 }
 
-main ol, main ul {
+main ol,
+main ul {
   list-style-position: inside;
 }
 
