--- a/css/last-redoubt.scss
+++ b/css/last-redoubt.scss
@@ -156,7 +156,8 @@ main {
     line-height: 1.5;
 }
 
-main ol, main ul {
+main ol,
+main ul {
     list-style-position: inside;
 }
 
@@ -261,6 +262,11 @@ article ul {
 article ol li,
 article ul li {
     margin-bottom: .65rem;
+}
+
+article blockquote {
+    color: $silver;
+    text-align: left;
 }
 
 /* There is no argument section anywhere but the index page,
